--- a/.env.TEMPLATE
+++ b/.env.TEMPLATE
@@ -14,5 +14,6 @@ STORAGE_BACKEND=local
 
 LOCAL_FILESYSTEM_BASE_DIRECTORY=./uploads
 
-S3_SERVICE_URL=localhost
-S3_BUCKET=microscale_files
+AZURE_BLOB_STORAGE_URL=
+AZURE_BLOB_STORAGE_CONTAINER_NAME=
+AZURE_BLOB_STORAGE_SHARED_KEY=
